--- a/hello-mybatis-dao/pom.xml
+++ b/hello-mybatis-dao/pom.xml
@@ -35,7 +35,14 @@
       <artifactId>mybatis</artifactId>
       <version>3.5.1</version>
     </dependency>
+    <!--pagehelper分页插件-->
+    <dependency>
+      <groupId>com.github.pagehelper</groupId>
+      <artifactId>pagehelper</artifactId>
+      <version>5.1.10</version>
+    </dependency>
   </dependencies>
+
 
   <build>
     <resources>
