--- a/hello-springMVC-start/pom.xml
+++ b/hello-springMVC-start/pom.xml
@@ -55,6 +55,19 @@
       <version>2.0</version>
       <scope>provided</scope>
     </dependency>
+
+
+    <dependency>
+      <groupId>javax.servlet.jsp.jstl</groupId>
+      <artifactId>jstl-api</artifactId>
+      <version>1.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.taglibs</groupId>
+      <artifactId>taglibs-standard-impl</artifactId>
+      <version>1.2.5</version>
+    </dependency>
   </dependencies>
 
 </project>
